# pb_pattern_maker

./: CLAUDE.md  README.md  jacket.txt
docs/superpowers/plans/: 2026-04-06-pixelblaze-pattern-creator.md  2026-07-21-fakeblaze-hardware-optional-plan.md  2026-07-22-hardware-perf-gate.md
egg_mapping/: led_map_2d_20260417-225159.csv  led_map_2d_20260417-231237.csv  led_map_2d_20260417-233628.csv
palette_maker/: AGENTS.md  CLAUDE.md  palette.py  pyproject.toml
palette_maker/.claude/skills/palette/: SKILL.md
palette_maker/palette_maker/: cli.py  fetch.py  format.py  index.py  insert.py  parse.py  preview.py  score.py  urls.py
palette_maker/tests/: test_cli.py  test_fetch.py  test_format.py  test_index.py  test_insert.py  test_parse.py  test_preview.py  test_score.py  test_urls.py
palette_maker/tests/fixtures/: bhw2_whooo.css
palette_maker/tests/fixtures/mini_corpus/bhw/bhw1/: bhw1_05.css
palette_maker/tests/fixtures/mini_corpus/nd/atmospheric/: Sunset_Real.css
pattern_maker/: AGENTS.md  CLAUDE.md  compiler.py  pb.py  pyproject.toml  test_compiler.py  test_fakeblaze_server.py  test_perf.py  test_protocol.py  test_renderworker.py  test_storage.py  test_validate.py  validate.py
pattern_maker/fakeblaze/: __main__.py  protocol.py  render_worker.mjs  renderworker.py  server.py  storage.py
pattern_maker/patterns/: zranger_2d_3d
pattern_maker/references/: 2d-parity.md  3d-techniques.md  color-craft.md  composition.md  language.md  motion-design.md  safety-rules.md  visual-rubric.md  waveforms.md
pattern_maker/tools/: capture_protocol.py  perf_estimate.mjs
(+97 files in other folders)
