[project]
name = "palette_maker"
version = "0.1.0"
description = "Fetch cpt-city palettes and format them for PixelBlaze patterns."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
